applications/amity/web/overlays/use1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amity-web
  namespace: amity-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amity-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: amity-web
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - amity-web
              topologyKey: kubernetes.io/hostname
      containers:
        - name: website
          image: registry.vngenterprise.com/k8s/amity-web:ee31662
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
