applications/amity/web/overlays/use1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amity-web
  namespace: amity-web
spec:
  selector:
    app: amity-web
  ports:
  - port: 80
    targetPort: 443
