applications/amity/web/overlays/use1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: amity-web
  namespace: amity-web
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`amityrust.com`)
    kind: Rule
    services:
    - name: https
      port: 443
  tls:
    store:
      name: amity
      namespace: traefik
